--- a/Lib_Base/src/main/res/values/styles.xml
+++ b/Lib_Base/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="base_AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="base_AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/base_colorPrimary</item>
         <item name="colorPrimaryDark">@color/base_colorPrimaryDark</item>
