--- a/Lib_Main/src/main/res/layout/main_activity_main.xml
+++ b/Lib_Main/src/main/res/layout/main_activity_main.xml
@@ -34,6 +34,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mBtn" />
 
+    <Button
+        android:id="@+id/mDebacle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="崩溃"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mIntentBtn" />
+
     <FrameLayout
         android:layout_width="200dp"
         android:layout_height="200dp"
