--- a/app/src/main/res/layout/my_activity_layout.xml
+++ b/app/src/main/res/layout/my_activity_layout.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
     <TextView
-        android:text="my"
-        android:gravity="center"
+        android:id="@+id/test_Tv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="#000"
+        android:textSize="20sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
